# ldapeditor

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.ja.md  README.md
.github/workflows/: ci.yml  release.yml
locales/: en.yml  ja.yml
src/: ldap.rs  main.rs  model.rs  schema.rs
src/app/: actions.rs  mod.rs  state.rs  tree.rs
src/ui/: detail.rs  input.rs  mod.rs  overlay.rs  tree.rs
